--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="font/icon.css">
+    <link rel="stylesheet" href="font/neutraText.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Cultiva</title>
   </head>
