--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <!-- Page header -->
     <header>
       <!-- Logo -->
       <div class="logo"></div>
@@ -36,27 +37,16 @@
       </div>
     </header>
 
-    <section class="hero">
-      <img src="#" alt="Hero Image for Cultiva">
-    </section>
+    <!-- Page main content -->
+    <main id='main' name="main"></main>
 
-    <article class="intro">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mauris massa, facilisis nec congue eu, pretium eu ante. Nulla egestas quam vitae augue sodales, vel bibendum nunc sollicitudin. Fusce ut quam odio. Nam at ante in risus molestie commodo. Cras dapibus ex vitae mauris egestas, quis vehicula risus lobortis. Fusce porttitor lectus sed arcu vehicula posuere. Suspendisse lacinia erat nec leo mollis placerat. Nunc vitae tincidunt sapien. Donec orci urna, maximus eget pellentesque vel, interdum in mi. Integer pulvinar faucibus enim.</p>
-      <p>In libero libero, iaculis quis lorem a, scelerisque porttitor nulla. Suspendisse interdum interdum mauris sed hendrerit. Pellentesque nulla odio, viverra a mi eu, dictum aliquet metus. Duis eu lacus imperdiet, iaculis ex fermentum, iaculis lacus. Mauris dui enim, tempor auctor orci at, eleifend sollicitudin lorem. Sed auctor ex mauris, eu lobortis lacus pellentesque et. Sed congue a diam eu aliquam. Aliquam nec mattis dui, ac rutrum leo. Mauris dignissim semper massa, in pellentesque dolor volutpat eget.</p>
-      <p>Fusce volutpat arcu in pellentesque cursus. Proin et hendrerit eros, in varius felis. Nullam elementum varius malesuada. Cras libero neque, eleifend vitae metus id, blandit commodo nisi. Duis ultricies sapien vitae sem placerat, et auctor nunc suscipit. Cras consectetur bibendum elit, sed molestie magna convallis imperdiet. Donec accumsan mollis sapien at ultrices. Donec congue efficitur velit, at gravida dolor luctus eu. In non mauris elementum, hendrerit dolor et, scelerisque nisi. Phasellus eleifend, sem in placerat sodales, enim eros rutrum tortor, quis posuere diam massa in augue. Cras lobortis dapibus lacus nec ornare. Curabitur at erat dictum, scelerisque arcu sed, tristique augue. Donec quis hendrerit ligula, sed semper elit. Mauris quis mollis sem. Donec tristique ante eget enim volutpat, vitae dignissim odio egestas.</p>
-    </article>
-
-    <article class="products">
-      <h2>Productos</h2>
-      <div class="products-list">
-        <div><h3>Microgreens</h3></div>
-        <div><h3>Flores Comestibles</h3></div>
-        <div><h3>Vegetales Extraordinarios</h3></div>
-      </div>
-    </article>
-
+    <!-- Page footer -->
     <footer>
       <p>Page footer</p>
     </footer>
+
+    <script type="text/javascript" src="js/home.js"></script>
+    <script type="text/javascript" src="js/products.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
