Placeholder pages and links created for other pages

--- a/images.html
+++ b/images.html
@@ -534,25 +534,7 @@
 
     <!-- Page main content -->
     <main id='main' name="main">
-      <section class="hero">
-        <img src="img/hero.jpg" alt="Hero Image for Cultiva">
-      </section>
-
-      <section class="description">
-        <img src="svg/icon.svg" alt="Cultiva logo icon" class="logo-icon">
-        <article class="intro">
-          <div class="text">
-            <h1>Who we are!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mauris massa, facilisis nec congue eu, pretium eu ante. Nulla egestas quam vitae augue sodales, vel bibendum nunc sollicitudin. Fusce ut quam odio. Nam at ante in risus molestie commodo. Cras dapibus ex vitae mauris egestas, quis vehicula risus lobortis. Fusce porttitor lectus sed arcu vehicula posuere. Suspendisse lacinia erat nec leo mollis placerat. Nunc vitae tincidunt sapien. Donec orci urna, maximus eget pellentesque vel, interdum in mi. Integer pulvinar faucibus enim.</p>
-            <p>In libero libero, iaculis quis lorem a, scelerisque porttitor nulla. Suspendisse interdum interdum mauris sed hendrerit. Pellentesque nulla odio, viverra a mi eu, dictum aliquet metus. Duis eu lacus imperdiet, iaculis ex fermentum, iaculis lacus. Mauris dui enim, tempor auctor orci at, eleifend sollicitudin lorem. Sed auctor ex mauris, eu lobortis lacus pellentesque et. Sed congue a diam eu aliquam. Aliquam nec mattis dui, ac rutrum leo. Mauris dignissim semper massa, in pellentesque dolor volutpat eget.</p>
-          </div>
-          <div class="text">
-            <h1>What we do!</h1>
-            <p>Fusce volutpat arcu in pellentesque cursus. Proin et hendrerit eros, in varius felis. Nullam elementum varius malesuada. Cras libero neque, eleifend vitae metus id, blandit commodo nisi. Duis ultricies sapien vitae sem placerat, et auctor nunc suscipit. Cras consectetur bibendum elit, sed molestie magna convallis imperdiet. Donec accumsan mollis sapien at ultrices. Donec congue efficitur velit, at gravida dolor luctus eu. In non mauris elementum, hendrerit dolor et, scelerisque nisi. Phasellus eleifend, sem in placerat sodales, enim eros rutrum tortor, quis posuere diam massa in augue. Cras lobortis dapibus lacus nec ornare. Curabitur at erat dictum, scelerisque arcu sed, tristique augue. Donec quis hendrerit ligula, sed semper elit. Mauris quis mollis sem. Donec tristique ante eget enim volutpat, vitae dignissim odio egestas.</p>
-          </div>
-        </article>
-      </section>
-
+      <p>images - hello world</p>
     </main>
 
     <!-- Page footer -->
