--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-const Home = `
+
     <section class="hero">
       <img src="img/hero.jpg" alt="Hero Image for Cultiva">
     </section>
@@ -16,4 +16,4 @@ const Home = `
           <p>Fusce volutpat arcu in pellentesque cursus. Proin et hendrerit eros, in varius felis. Nullam elementum varius malesuada. Cras libero neque, eleifend vitae metus id, blandit commodo nisi. Duis ultricies sapien vitae sem placerat, et auctor nunc suscipit. Cras consectetur bibendum elit, sed molestie magna convallis imperdiet. Donec accumsan mollis sapien at ultrices. Donec congue efficitur velit, at gravida dolor luctus eu. In non mauris elementum, hendrerit dolor et, scelerisque nisi. Phasellus eleifend, sem in placerat sodales, enim eros rutrum tortor, quis posuere diam massa in augue. Cras lobortis dapibus lacus nec ornare. Curabitur at erat dictum, scelerisque arcu sed, tristique augue. Donec quis hendrerit ligula, sed semper elit. Mauris quis mollis sem. Donec tristique ante eget enim volutpat, vitae dignissim odio egestas.</p>
         </div>
       </article>
-    </section>`
+    </section>
