--- a/products.html
+++ b/products.html
@@ -16,11 +16,11 @@
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
-        <a href="/index.html">
+        <a href="index.html">
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="/products.html" onclick="loadPage(Products)">
+        <a href="products.html" onclick="loadPage(Products)">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -521,11 +521,11 @@
             </svg>
 
         </div>
-        <a href="/images.html">
+        <a href="images.html">
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
-        <a href="/contact.html">
+        <a href="contact.html">
           <div class="entypo-vcard"></div>
           <span>Contact</span>
         </a>
@@ -534,7 +534,18 @@
 
     <!-- Page main content -->
     <main id='main' name="main">
-      <p>products - hello world</p>
+      <article class="products">
+        <img src="/svg/microgreens.svg" alt="">
+        <img src="/svg/vegetales.svg" alt="">
+        <img src="/svg/flores.svg" alt="">
+      <hr>
+      <h2>Productos</h2>
+      <div class="products-list">
+        <div><h3>Microgreens</h3></div>
+        <div><h3>Flores Comestibles</h3></div>
+        <div><h3>Vegetales Extraordinarios</h3></div>
+      </div>
+    </article>
     </main>
 
     <!-- Page footer -->
