--- a/images.html
+++ b/images.html
@@ -16,11 +16,11 @@
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
-        <a href="/index.html">
+        <a href="index.html">
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="/products.html" onclick="loadPage(Products)">
+        <a href="products.html" onclick="loadPage(Products)">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -521,11 +521,11 @@
             </svg>
 
         </div>
-        <a href="/images.html">
+        <a href="images.html">
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
-        <a href="/contact.html">
+        <a href="contact.html">
           <div class="entypo-vcard"></div>
           <span>Contact</span>
         </a>
