minor changes to product SVGs

--- a/products.html
+++ b/products.html
@@ -535,15 +535,15 @@
     <!-- Page main content -->
     <main id='main' name="main">
       <article class="products">
-        <div class="svg-microgreens">
+        <a href="#" class="svg-microgreens">
           <h2>Mircogreens</h2>
-        </div>
-        <div class="svg-flowers">
+        </a>
+        <a href="#" class="svg-flowers">
           <h2>Eatable Flowers</h2>
-        </div>
-        <div class="svg-veggy">
+        </a>
+        <a href="#" class="svg-veggy">
           <h2>Super Vegetables</h2>
-        </div>
+        </a>
 
       </article>
     </main>
