page selection styling changes

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html" onclick="loadPage(Products)">
+        <a href="products.html">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -525,7 +525,7 @@
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
-        <a href="contact.html">
+        <a href="contact.html" class="on-page">
           <div class="entypo-vcard"></div>
           <span>Contact</span>
         </a>
