--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
-        <a href="index.html">
+        <a href="index.html" class="on-page">
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html" onclick="loadPage(Products)">
+        <a href="products.html">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
