--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html" onclick="loadPage(Products)">
+        <a href="products.html" class="on-page">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -544,7 +544,6 @@
         <a href="#" class="svg-veggy">
           <h2>Super Vegetables</h2>
         </a>
-
       </article>
     </main>
 
