--- a/images.html
+++ b/images.html
@@ -20,7 +20,7 @@
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html" onclick="loadPage(Products)">
+        <a href="products.html">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -521,7 +521,7 @@
             </svg>
 
         </div>
-        <a href="images.html">
+        <a href="images.html" class="on-page">
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
