scss clean up nesting on header

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
-        <a href="index.html" class="on-page">
+        <a href="index.html" class="nav-link on-page">
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html">
+        <a href="products.html" class="nav-link">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -526,11 +526,11 @@
             </svg>
 
         </div>
-        <a href="images.html">
+        <a href="images.html" class="nav-link">
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
-        <a href="contact.html">
+        <a href="contact.html" class="nav-link">
           <div class="entypo-vcard"></div>
           <span>Contact</span>
         </a>
