--- a/images.html
+++ b/images.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="font/icon.css">
     <link rel="stylesheet" href="font/neutraText.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>Cultiva</title>
+    <title>Cultiva | Images</title>
   </head>
 
   <body>
@@ -16,11 +16,11 @@
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
-        <a href="index.html">
+        <a href="index.html" class="nav-link">
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html">
+        <a href="products.html" class="nav-link">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -521,11 +521,11 @@
             </svg>
 
         </div>
-        <a href="images.html" class="on-page">
+        <a href="images.html" class="nav-link on-page">
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
-        <a href="contact.html">
+        <a href="contact.html" class="nav-link">
           <div class="entypo-vcard"></div>
           <span>Contact</span>
         </a>
