links for product pages added

--- a/products/flowers.html
+++ b/products/flowers.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="font/icon.css">
-    <link rel="stylesheet" href="font/neutraText.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <title>Cultiva | Images</title>
+    <link rel="stylesheet" href="../font/icon.css">
+    <link rel="stylesheet" href="../font/neutraText.css">
+    <link rel="stylesheet" href="../css/style.min.css">
+    <title>Cultiva | Products | Edible Flowers</title>
   </head>
 
   <body>
@@ -16,11 +16,11 @@
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
-        <a href="index.html" class="nav-link">
+        <a href="../index.html" class="nav-link">
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products/index.html" class="nav-link">
+        <a href="index.html" class="nav-link on-page">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -518,14 +518,13 @@
               transform="translate(-43.9 -42.84)"/>
               <path class="cls-53" d="M617,599.88l-1.63-1.52a319.66,319.66,0,0,0,.41-435.47l1.63-1.51a321.88,321.88,0,0,1-.41,438.5Z" transform="translate(-43.9 -42.84)"/>
               <path class="cls-54" d="M145.94,599.87a321.88,321.88,0,0,1,.41-438.5l1.63,1.52a319.67,319.67,0,0,0-.41,435.47Z" transform="translate(-43.9 -42.84)"/>
-            </svg>
-
+          </svg>
         </div>
-        <a href="images.html" class="nav-link on-page">
+        <a href="../images.html" class="nav-link">
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
-        <a href="contact.html" class="nav-link">
+        <a href="../contact.html" class="nav-link">
           <div class="entypo-vcard"></div>
           <span>Contact</span>
         </a>
@@ -534,7 +533,7 @@
 
     <!-- Page main content -->
     <main id='main' name="main">
-      <p>images - hello world</p>
+
     </main>
 
     <!-- Page footer -->
