--- a/products/index.html
+++ b/products/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="font/icon.css">
-    <link rel="stylesheet" href="font/neutraText.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="../font/icon.css">
+    <link rel="stylesheet" href="../font/neutraText.css">
+    <link rel="stylesheet" href="../css/style.min.css">
     <title>Cultiva | Products</title>
   </head>
 
@@ -16,11 +16,11 @@
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
-        <a href="index.html" class="nav-link">
+        <a href="../index.html" class="nav-link">
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html" class="nav-link on-page">
+        <a href="index.html" class="nav-link on-page">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
@@ -521,11 +521,11 @@
             </svg>
 
         </div>
-        <a href="images.html" class="nav-link">
+        <a href="../images.html" class="nav-link">
           <div class="entypo-picture"></div>
           <span>Images</span>
         </a>
-        <a href="contact.html" class="nav-link">
+        <a href="../contact.html" class="nav-link">
           <div class="entypo-vcard"></div>
           <span>Contact</span>
         </a>
@@ -535,14 +535,14 @@
     <!-- Page main content -->
     <main id='main' name="main">
       <article class="products">
-        <a href="#" class="svg-microgreens">
-          <h2>Mircogreens</h2>
+        <a href="microgreens.html" class="svg-microgreens">
+          <h2>Microgreens</h2>
         </a>
-        <a href="#" class="svg-flowers">
-          <h2>Eatable Flowers</h2>
+        <a href="flowers.html" class="svg-flowers">
+          <h2>Edible Flowers</h2>
         </a>
-        <a href="#" class="svg-veggy">
-          <h2>Super Vegetables</h2>
+        <a href="vegetables.html" class="svg-veggy">
+          <h2>Extraordinary Vegetables</h2>
         </a>
       </article>
     </main>
