--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="products.html" class="nav-link">
+        <a href="products/index.html" class="nav-link">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
