--- a/products/microgreens.html
+++ b/products/microgreens.html
@@ -20,7 +20,7 @@
           <div class="entypo-home"></div>
           <span>Home</span>
         </a>
-        <a href="index.html" class="nav-link on-page">
+        <a href="index.html" class="nav-link">
           <div class="entypo-leaf"></div>
           <span>Products</span>
         </a>
