Product List pages templated

--- a/products/flowers.html
+++ b/products/flowers.html
@@ -533,7 +533,71 @@
 
     <!-- Page main content -->
     <main id='main' name="main">
-
+      <section class="product-page">
+        <h2 class="product-page-title">Edible Flowers</h2>
+        <article class="product-list">
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+          <div class="product-item">
+            <img src="#" alt="">
+            <h3>Item Name</h3>
+            <p class="taste">Taste</p>
+            <p class="look">Look</p>
+          </div>
+        </article>
+      </section>
     </main>
 
     <!-- Page footer -->
@@ -547,6 +611,6 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/index.js"></script>
   </body>
 </html>
