--- a/products/index.html
+++ b/products/index.html
@@ -558,6 +558,6 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="../js/index.js"></script>
   </body>
 </html>
