--- a/products/index.html
+++ b/products/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../font/icon.css">
     <link rel="stylesheet" href="../font/neutraText.css">
     <link rel="stylesheet" href="../css/style.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Cultiva | Products</title>
   </head>
 
