bug fix - class name conflict

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         <img src="img/hero.jpg" alt="Hero Image for Cultiva">
       </section>
 
-      <section class="description">
+      <section class="about">
         <img src="svg/icon.svg" alt="Cultiva logo icon" class="logo-icon">
         <article class="intro">
           <div class="text">
