--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
   </head>
 
   <body>
-    <!-- Page header -->
-    <header>
-      <!-- Language selection -->
-      <div class="lang">
-        <a href="#"></a>
-      </div>
+    <!-- Language selection -->
+    <div class="lang">
+      <div class="en">English</div>
+      <div class="es hide">Español</div>
+    </div>
 
+    <!-- Page header -->
+    <header class="header-nav">
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
