--- a/products/flowers.html
+++ b/products/flowers.html
@@ -12,8 +12,13 @@
   </head>
 
   <body>
+    <!-- Language selection -->
+    <div class="lang">
+      <div class="en">English</div>
+      <div class="es hide">Español</div>
+    </div>
     <!-- Page header -->
-    <header>
+    <header class="header-nav">
       <!-- navigation -->
       <nav class="nav">
         <!-- <div class="entypo-menu menu"></div> -->
