--- a/products/microgreens.html
+++ b/products/microgreens.html
@@ -12,8 +12,13 @@
   </head>
 
   <body onload="products('microgreens');">
+    <!-- Language selection -->
+    <div class="lang">
+      <div class="en">English</div>
+      <div class="es hide">Español</div>
+    </div>
     <!-- Page header -->
-    <header>
+    <header class="header-nav">
       <!-- navigation -->
       <nav class="nav">
         <a href="../index.html" class="nav-link">
