footer elements and styleing adjusted

--- a/index.html
+++ b/index.html
@@ -40,17 +40,37 @@
           </div>
         </article>
       </section>
-
     </main>
 
     <!-- Page footer -->
     <footer>
-      <div class="icons">
-        <ul>
-          <li class="entypo-instagrem" alt="Instagram Icon"></li>
-          <li class="entypo-facebook-squared" alt="Facebook Icon"></li>
-          <li class="entypo-globe" alt="Language Icon"></li>
-        </ul>
+      <div class="contact">
+        <address class="ecuador">
+          <h3>Ecuador</h3>
+          <a href="tel:+53955555555">+593 5555 5555</a>
+          <a href="mailto:#">email@cultiva.com</a>
+          <div class="location">
+            <p>street address</p>
+            <p>city, provience, Ecuador</p>
+          </div>
+          <div class="icons">
+            <a href="#" class="social entypo-instagrem" alt="Instagram Icon"></a>
+            <a href="#" class="social entypo-facebook-squared" alt="Facebook Icon"></a>
+          </div>
+        </address>
+        <address class="kenya">
+          <h3>Kenya</h3>
+          <a href="tel:+25455555555">+254 5555 5555</a>
+          <a href="mailto:#">email@cultiva.com</a>
+          <div class="location">
+            <p>street address</p>
+            <p>city, provience, Kenya</p>
+          </div>
+          <div class="icons">
+            <a href="#" class="social entypo-instagrem" alt="Instagram Icon"></a>
+            <a href="#" class="social entypo-facebook-squared" alt="Facebook Icon"></a>
+          </div>
+        </address>
       </div>
     </footer>
 
