footer and contact html added and parsed

--- a/index.html
+++ b/index.html
@@ -43,36 +43,7 @@
     </main>
 
     <!-- Page footer -->
-    <footer>
-      <div class="contact">
-        <address class="ecuador">
-          <h3>Ecuador</h3>
-          <a href="tel:+53955555555">+593 5555 5555</a>
-          <a href="mailto:#">email@cultiva.com</a>
-          <div class="location">
-            <p>street address</p>
-            <p>city, provience, Ecuador</p>
-          </div>
-          <div class="icons">
-            <a href="#" class="social entypo-instagrem" alt="Instagram Icon"></a>
-            <a href="#" class="social entypo-facebook-squared" alt="Facebook Icon"></a>
-          </div>
-        </address>
-        <address class="kenya">
-          <h3>Kenya</h3>
-          <a href="tel:+25455555555">+254 5555 5555</a>
-          <a href="mailto:#">email@cultiva.com</a>
-          <div class="location">
-            <p>street address</p>
-            <p>city, provience, Kenya</p>
-          </div>
-          <div class="icons">
-            <a href="#" class="social entypo-instagrem" alt="Instagram Icon"></a>
-            <a href="#" class="social entypo-facebook-squared" alt="Facebook Icon"></a>
-          </div>
-        </address>
-      </div>
-    </footer>
+    <footer></footer>
 
     <script type="text/javascript" src="../js/header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
