images page added

--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,7 @@
     </main>
 
     <!-- Page footer -->
-    <footer>
-      <div class="icons">
-        <ul>
-          <li class="entypo-instagrem" alt="Instagram Icon"></li>
-          <li class="entypo-facebook-squared" alt="Facebook Icon"></li>
-          <li class="entypo-globe" alt="Language Icon"></li>
-        </ul>
-      </div>
-    </footer>
+    <footer></footer>
 
     <script type="text/javascript" src="../js/header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
