--- a/images.html
+++ b/images.html
@@ -21,22 +21,13 @@
     </header>
 
     <!-- Page main content -->
-    <main id='main' name="main">
-      <p>images - hello world</p>
-    </main>
+    <main id='main' name="main"></main>
 
     <!-- Page footer -->
-    <footer>
-      <div class="icons">
-        <ul>
-          <li class="entypo-instagrem" alt="Instagram Icon"></li>
-          <li class="entypo-facebook-squared" alt="Facebook Icon"></li>
-          <li class="entypo-globe" alt="Language Icon"></li>
-        </ul>
-      </div>
-    </footer>
+    <footer></footer>
 
     <script type="text/javascript" src="../js/header.js"></script>
+    <script type="text/javascript" src="../js/images.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
