Contact page - add maps

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="contact">
+<html class="contact-page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,14 +21,13 @@
     </header>
 
     <!-- Page main content -->
-    <main id='main' name="main">
-      <p>contact - hello world</p>
-    </main>
+    <main id='main' name="main"></main>
 
     <!-- Page footer -->
     <footer></footer>
 
     <script type="text/javascript" src="../js/header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/map.js"></script>
   </body>
 </html>
