changes on product page
Product Page style changes and background spacing.

--- a/products/index.html
+++ b/products/index.html
@@ -23,15 +23,21 @@
     <!-- Page main content -->
     <main id='main' name="main">
       <article class="products">
-        <a href="microgreens.html" class="svg-microgreens">
-          <h2>Microgreens</h2>
-        </a>
-        <a href="flowers.html" class="svg-flowers">
-          <h2>Edible Flowers</h2>
-        </a>
-        <a href="vegetables.html" class="svg-veggy">
-          <h2>Extraordinary Vegetables</h2>
-        </a>
+        <div class='border'>
+          <a href="microgreens.html" class="svg-microgreens">
+            <h2>Microgreens</h2>
+          </a>
+        </div>
+        <div class='border'>
+          <a href="flowers.html" class="svg-flowers">
+            <h2>Edible Flowers</h2>
+          </a>
+        </div>
+        <div class='border'>
+          <a href="vegetables.html" class="svg-veggy">
+            <h2>Extraordinary Vegetables</h2>
+          </a>
+        </div>
       </article>
     </main>
 
