corrected javascript file reference
added correct routing or elements

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
     <!-- Page footer -->
     <footer></footer>
 
-    <script type="text/javascript" src="../js/header.js"></script>
+    <script type="text/javascript" src="js/header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
   </body>
