--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </article>
       </section>
     </main>
-    
+
     <!-- Page footer -->
     <footer></footer>
 
-    <script type="text/javascript" src="../js/header.js"></script>
+    <script type="text/javascript" src="js/header.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
