--- a/images.html
+++ b/images.html
@@ -26,8 +26,8 @@
     <!-- Page footer -->
     <footer></footer>
 
-    <script type="text/javascript" src="../js/header.js"></script>
-    <script type="text/javascript" src="../js/images.js"></script>
+    <script type="text/javascript" src="js/header.js"></script>
+    <script type="text/javascript" src="js/images.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
