--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html class='home'>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-sacle=1, maximum-scale=1, user-scalable=no">
+
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="font/icon.css">
     <link rel="stylesheet" href="font/neutraText.css">
     <link rel="stylesheet" href="css/style.min.css">
