home page populated by js

--- a/index.html
+++ b/index.html
@@ -24,38 +24,13 @@
     </header>
 
     <!-- Page main content -->
-    <main id='main' name="main">
-      <section class="hero">
-        <img src="img/hero.jpg"
-            srcset="img/hero.jpg 5120w,
-                    img/hero_2880.jpg 2880w,
-                    img/hero_2048.jpg 2048w,
-                    img/hero_1334.jpg 1334w,
-                    img/hero_800.jpg 800w,
-                    img/hero_640.jpg 640w"
-            alt="Hero Image for Cultiva">
-      </section>
-
-      <section class="about">
-        <img src="svg/icon.svg" alt="Cultiva logo icon" class="logo-icon">
-        <article class="intro">
-          <div class="text">
-            <h1>¿Que hacemos?</h1>
-            <p>En Cultiva creamos y cultivamos ingredientes naturales para mantenerte a la vanguardia culinaria. A través de los años, hemos logrado mantenernos como pioneros en el mercado de Microgreens, Flores Comestibles y Vegetales Extraordinarios, gracias a la creatividad y los gustos de nuestros clientes que nos inspiran día a día. Todos nuestros productos son cultivados conscientemente, respetando los ciclos de la naturaleza y pueden ser usados en restaurantes para deleitar a tus clientes, o en el hogar para darle un toque especial a tus comidas. Lo importante es que sepas que en Cultiva procuramos estar siempre pendientes de tus necesidades para que puedas dedicarte a crear platos sanos y saludables con los mejores ingredientes que tenemos disponibles.</p>
-          </div>
-          <div class="text">
-            <h1>¿Quienes somos?</h1>
-            <p>La familia Cultiva es un grupo de agrónomos y chefs que buscamos el crecimiento del área gastronómica en el país a través del cultivo de alimentos libres de químicos y pesticidas. Creemos en el proceso de la tierra a la mesa, en la regeneración de los suelos, y el respeto por el medio ambiente. Creemos firmemente en que cada uno de nuestros productos debe involucrar a los cinco sentidos: olfato, vista, tacto, gusto y oído, para así desafiar a los productos convencionales y tener una oferta novedosa y diferenciada. Además, estamos seguros que cuando hay una utilización óptima de todos los recursos y en simbiosis con el ecosistema, logramos producir productos más ricos y nutritivos.</p>
-          </div>
-        </article>
-      </section>
-    </main>
+    <main id='main' name="main"></main>
 
     <!-- Page footer -->
     <footer></footer>
 
     <script type="text/javascript" src="js/header.js"></script>
-    <script type="text/javascript" src="js/images.js"></script>
+    <script type="text/javascript" src="js/home.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
