font and logo optimization

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="font/icon.css">
-    <link rel="stylesheet" href="font/neutraText.css">
+    <link rel="stylesheet" href="font/neutraText/neutraText.css">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Cultiva</title>
