--- a/products/vegetables.html
+++ b/products/vegetables.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../font/icon.css">
-    <link rel="stylesheet" href="../font/neutraText.css">
+    <link rel="stylesheet" href="../font/neutraText/neutraText.css">
     <link rel="stylesheet" href="../css/style.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Cultiva | Products | Extraordinary Vegetables</title>
